# spatial-libs

./: README.md
cpp/: CMakeLists.txt  README.md
cpp/include/: generic_point.h  geos_benchmarks.h  geos_index.h  geos_load_dataset.h  geos_queries.h  geos_schema.h  io.h  s2_build_index.h  s2_load_dataset.h  s2_queries.h  s2_schema.h  util.h
cpp/src/: geos_benchmarks.cpp  geos_index_size.cpp  geos_index_time.cpp  s2_benchmarks.cpp  s2_index_size.cpp  s2_index_time.cpp
java/: pom.xml
java/src/main/java/org/spatiallibs/common/: ResourceLoader.java
java/src/main/java/org/spatiallibs/esrigeometry/: DistanceQueryScale.java  DistanceQuerySelectivity.java  IndexSize.java  IndexTime.java  JoinQuery.java  RangeQueryScale.java  RangeQuerySelectivity.java
java/src/main/java/org/spatiallibs/esrigeometry/index/: BuildIndex.java
java/src/main/java/org/spatiallibs/esrigeometry/queries/: Queries.java
java/src/main/java/org/spatiallibs/esrigeometry/util/: Utilities.java
java/src/main/java/org/spatiallibs/jsi/: DistanceQueryScale.java  DistanceQuerySelectivity.java  IndexSize.java  IndexTime.java  KnnQueryScale.java  KnnQuerySelectivity.java  RangeQueryScale.java  RangeQuerySelectivity.java
java/src/main/java/org/spatiallibs/jsi/index/: BuildIndex.java
java/src/main/java/org/spatiallibs/jsi/queries/: Queries.java
java/src/main/java/org/spatiallibs/jsi/util/: Utilities.java
java/src/main/java/org/spatiallibs/jts/index/: BuildIndex.java
java/src/main/java/org/spatiallibs/jts/kdtree/: DistanceQueryScale.java  DistanceQuerySelectivity.java  IndexSize.java  IndexTime.java  JoinQuery.java  RangeQueryScale.java  RangeQuerySelectivity.java
java/src/main/java/org/spatiallibs/jts/quadtree/: DistanceQueryScale.java  DistanceQuerySelectivity.java  IndexSize.java  IndexTime.java  JoinQuery.java  RangeQueryScale.java  RangeQuerySelectivity.java
java/src/main/java/org/spatiallibs/jts/queries/: Queries.java
java/src/main/java/org/spatiallibs/jts/strtree/: DistanceQueryScale.java  DistanceQuerySelectivity.java  IndexSize.java  IndexTime.java  JoinQuery.java  KnnQueryScale.java  KnnQuerySelectivity.java  RangeQueryScale.java  RangeQuerySelectivity.java
java/src/main/java/org/spatiallibs/jts/util/: TreeNode.java  Utilities.java
java/src/main/java/org/spatiallibs/jvptree/: DistanceQueryScale.java  DistanceQuerySelectivity.java  IndexSize.java  IndexTime.java  KnnQueryScale.java  KnnQuerySelectivity.java  RangeQueryScale.java  RangeQuerySelectivity.java
java/src/main/java/org/spatiallibs/jvptree/cartesianpoint/: CartesianDistanceFunction.java  CartesianPoint.java  SimpleCartesianPoint.java
java/src/main/java/org/spatiallibs/jvptree/index/: BuildIndex.java
java/src/main/java/org/spatiallibs/jvptree/queries/: Queries.java
java/src/main/java/org/spatiallibs/jvptree/util/: Utilities.java
setup/: setup.sh
setup/converters/: PointsToBinary.java  points_to_binary.cpp
